@@ -1,0 +1,9 @@
+Title: new option "negation" for filter "several service groups"
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i1
+Date: 1474370770
+Class: feature
+
+
