@@ -425,6 +425,7 @@
     * 3864 tactical overview now shows the number of stale hosts and services
     * 3847 Painter options can now be reset to defaults...
     * 3856 Improved handling of Check_MK GUI request timeouts...
+    * 3876 new option "negation" for filter "several service groups"
     * 3059 FIX: Fixed highlighting of availability timeline time slices
     * 3175 FIX: Fix timeranges of graphs that are embedded in a dashboard...
     * 3076 FIX: fixed broken views in check_mk raw edition
